--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/index.html
@@ -30,7 +30,7 @@
                             </h2>
                             <div class="panel-toolbar">
                                  <div class="d-flex position-relative ml-auto mr-2" style="min-width: 10rem;">
-                                    {% select_tag opciones_filtro 'filtro_consecutivos' '' value=id_filtro %}
+                                    {% select_tag opciones_filtro 'filtro_consecutivos' '' is_tupla=True value=id_filtro %}
                                  </div>
                                 <input id="ruta_filtro_consecutivos" hidden value="/gestion-documental/consecutivo-actascontratos/">
                             </div>
