--- a/GestionActividades/templates/GestionActividades/Actividades/_cargar_editar_soportes_modal.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/_cargar_editar_soportes_modal.html
@@ -17,7 +17,7 @@
                 <div class="form-group">
                     <div class="form-group">
                         <div id="fecha_final_mostrar"  class="col-md-12">
-                            {% input_date_tag 'fecha_final' 'Fecha de Finalización' placeholder="Seleccione la fecha de finalización" value=actividad_fecha_finalizacion required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
+                            {% input_date_tag 'fecha_final' 'Fecha de Finalización' placeholder="Seleccione la fecha de finalización" value=actividad_fecha_finalizacion required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de finalización.' %}
                         </div>
                     </div>
                     {% if actividad.soporte_requerido%}
