--- a/GestionActividades/templates/GestionActividades/Actividades/_crear_editar_actividades_modal.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/_crear_editar_actividades_modal.html
@@ -17,10 +17,10 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-6">
-                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese un nombre" required="" maxlength="100"  value=actividad.nombre mensaje_validacion='Por favor digite un nombre para el grupo' invalido=errores.nombre %}
+                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese un nombre" required="" maxlength="100"  value=actividad.nombre mensaje_validacion='Por favor digite un nombre para la actividad' invalido=errores.nombre %}
                             </div>
                             <div class="col-md-6">
-                                {% select_tag colaboradores 'supervisor_id' 'Seleccione un supervisor' texto_label="Supervisor" value=actividad.supervisor_id required="" invalido=errores.contrato mensaje_validacion='Por favor seleccione un contrato' %}
+                                {% input_text_tag 'codigo' 'Código' placeholder="Ingrese un código" required="" maxlength="100"  value=actividad.codigo mensaje_validacion='Por favor digite un codigo para la actividad' invalido=errores.codigo %}
                             </div>
                         </div>
                     </div>
@@ -28,6 +28,13 @@
                         <div class="row">
                             <div class="col-md-12">
                                 {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese una descripción" required="" maxlength="300" value=actividad.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                {% select_tag colaboradores 'supervisor_id' 'Seleccione un supervisor' texto_label="Supervisor" value=actividad.supervisor_id required="" mensaje_validacion='Por favor seleccione un supervisor' invalido=errores.supervisor %}
                             </div>
                         </div>
                     </div>
