--- a/GestionActividades/templates/GestionActividades/Actividades/Index.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/Index.html
@@ -87,7 +87,7 @@
                                                         {% if actividad.grupo_actividad_id ==  grupo.id %}
                                                         <div class="col-12 col">
                                                             <div class="row no-gutters row-grid align-items-stretch">
-                                                                <div class="col-sm-8 col-md-3">
+                                                                <div class="col-sm-8 col-md-3 hidden-md-down">
                                                                     <div class="p-3">
                                                                         <div class="d-flex">
                                                                             <div class="d-inline-flex flex-column">
@@ -174,19 +174,32 @@
                                                                                     </small>
                                                                                 </div>
                                                                             {% endif %}
+                                                                            {% if perms.GestionActividades.add_avance %}
+                                                                                {% if actividad.porcentaje_avance != 100%}
+                                                                                    {% if actividad.estado == EstadosActividades.EN_PROCESO or actividad.estado == EstadosActividades.REABIERTA%}
+                                                                                        <div class="col-md-4">
+                                                                                            <small>
+                                                                                                <a class="fad fa-3x fa-undo-alt" id="actualizar_actividad_{{ actividad.id }}" href="javascript:abrirModalActualizarActividad('{% url 'GestionActividades:actividades-actualizar' actividad.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Actualizar Actividad"></a>
+                                                                                            </small>
+                                                                                        </div>
+                                                                                    {% endif %}
+                                                                                {% endif %}
+                                                                            {% endif %}
                                                                             {% if perms.GestionActividades.add_archivo %}
-                                                                                {% if actividad.estado == EstadosActividades.EN_PROCESO or actividad.estado == EstadosActividades.REABIERTA%}
-                                                                                    <div class="col-md-2">
-                                                                                        <small>
-                                                                                            <a class="fas fa-3x fa-clipboard-check" id="cargar_soporte_{{ actividad.id }}" href="javascript:abrirModalCargarSoporte('{% url 'GestionActividades:soportes-cargar' actividad.id %}', '{{actividad.soporte_requerido}}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Finalizar Actividad"></a>
-                                                                                        </small>
-                                                                                    </div>
+                                                                                {% if actividad.porcentaje_avance == 100%}
+                                                                                    {% if actividad.estado == EstadosActividades.EN_PROCESO or actividad.estado == EstadosActividades.REABIERTA%}
+                                                                                        <div class="col-md-3">
+                                                                                            <small>
+                                                                                                <a class="fas fa-3x fa-clipboard-check" id="cargar_soporte_{{ actividad.id }}" href="javascript:abrirModalCargarSoporte('{% url 'GestionActividades:soportes-cargar' actividad.id %}', '{{actividad.soporte_requerido}}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Finalizar Actividad"></a>
+                                                                                            </small>
+                                                                                        </div>
+                                                                                    {% endif %}
                                                                                 {% endif %}
                                                                             {% endif %}
                                                                             {%  if perms.GestionActividades.view_archivo %}
                                                                                 {% if actividad.estado == EstadosActividades.FINALIZADO and actividad.soporte_requerido %}
                                                                                     <div class="col-2">
-                                                                                        <div class="row col-xl-4">
+                                                                                        <div class="row col-xl-6">
                                                                                             <div class="accordion" id="accordionExample">
                                                                                                 <div class="card" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Soportes" >
                                                                                                     <div class="card-header" id="heading{{actividad.id}}">
@@ -196,6 +209,23 @@
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
+                                                                                {% endif %}
+                                                                            {% endif %}
+                                                                            {%  if perms.GestionActividades.view_avance %}
+                                                                                {% if actividad.porcentaje_avance != 100%}
+                                                                                    {% if actividad.estado == EstadosActividades.EN_PROCESO or actividad.estado == EstadosActividades.REABIERTA %}
+                                                                                        <div class="col-2">
+                                                                                            <div class="row col-xl-6">
+                                                                                                <div class="accordion" id="accordionExample_avance">
+                                                                                                    <div class="card" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Mostrar Avances" >
+                                                                                                        <div class="card-header" id="heading{{actividad.id}}">
+                                                                                                            <a href="javascript:void(0);" class="card collapsed p-md-0 fas fa-2x fa-tasks border-transparent align-content-center" data-toggle="collapse" data-target="#collapse_avance{{actividad.id}}" aria-expanded="false" aria-controls="collapse_avance{{actividad.id}}"></a>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    {% endif %}
                                                                                 {% endif %}
                                                                             {% endif %}
                                                                         </div>
@@ -212,6 +242,48 @@
                                                                                             <a class="fas fa-1x fa-download" style="text-decoration: none !important;" href="{% url 'GestionActividades:soportes-ver' actividad.id archivo.id archivo.archivo %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title=""></a>
                                                                                         </div>
                                                                                     </small>
+                                                                            {% endif %}
+                                                                        {% endfor %}
+                                                                    </div>
+                                                                </div>
+                                                                <div id="collapse_avance{{actividad.id}}" class="collapse container-demo" aria-labelledby="heading{{actividad.id}}" data-parent="#accordionExample_avance">
+                                                                    <div class="row p-6 p-md-4">
+                                                                        {% for avance in avances_actividad %}
+                                                                            {% if actividad.id == avance.actividad_id %}
+                                                                                    <div class="col-md-3">
+                                                                                        <small>
+                                                                                            <div class="card border shadow-0 mb-g shadow-sm-hover">
+                                                                                                <div class="card-header border-faded border-top-0 border-left-0 border-right-0 rounded-top mt-0 mb-0 pt-2 pb-0" style="height: 2.5rem;">
+                                                                                                    <a class="fs-xl p-md-2 text-primary">
+                                                                                                        Fecha:
+                                                                                                    </a>
+                                                                                                    <a class="fs-sm">
+                                                                                                        {{ avance.fecha_avance }}
+                                                                                                    </a>
+                                                                                                    <br>
+                                                                                                </div>
+                                                                                                <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
+                                                                                                    <div class="d-block p-2 text-muted fs-sm">
+                                                                                                        <a class="fs-lg text-dark" >
+                                                                                                            Descripción:
+                                                                                                        </a>
+                                                                                                        {{ avance.descripcion }}
+                                                                                                        <br><br>
+                                                                                                        <a class="fs-lg text-dark" >
+                                                                                                            Porcentaje:
+                                                                                                        </a>
+                                                                                                        {{ avance.porcentaje_avance }}%
+                                                                                                        <br><br>
+                                                                                                        <a class="fs-lg text-dark" >
+                                                                                                            Horas empleadas:
+                                                                                                        </a>
+                                                                                                        {{ avance.horas_empleadas }} h
+                                                                                                        <br><br>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </small>
+                                                                                    </div>
                                                                             {% endif %}
                                                                         {% endfor %}
                                                                     </div>
@@ -237,6 +309,8 @@
     </div>
     <div class="modal fade" tabindex="-1" id="crear-actividad" role="dialog"  aria-hidden="true"></div>
     <div class="modal fade" tabindex="-1" id="cargar-soporte" role="dialog"  aria-hidden="true"></div>
+    <div class="modal fade" tabindex="-1" id="actualizar-actividad" role="dialog"  aria-hidden="true"></div>
+
 
 {% endblock %}
 
@@ -252,6 +326,7 @@
     <script src="{% static 'EVA/Plantilla/js/custom/controlBusquedaPaginacion.js' %}"></script>
     <script src="{% static 'GestionActividades/js/actividades.js' %}"></script>
     <script src="{% static 'GestionActividades/js/cargar_soporte.js' %}"></script>
+    <script src="{% static 'GestionActividades/js/actualizar_actividad.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/app.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/dropzone/dropzone.js' %}"></script>
 {% endblock scripts%}
